# inflation-calc-api

./: .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt  runtest.sh  test_functions.py
src/: app.py  main.py
src/data/: cpidata.py
src/util/: date_helpers.py  formatting.py  formulas.py  query_data.py
tests/: test_date_helpers.py  test_formatting.py  test_functions.py  test_query_data.py
util/: formatting.py  formulas.py
